# ShibainuDemoProjects

./: read.md  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sbl/demoapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sbl/demoapp/: MainActivity.kt
app/src/main/java/com/sbl/demoapp/repository/: DbRepository.kt
app/src/main/java/com/sbl/demoapp/vm/: DbVm.kt
app/src/main/res/layout/: activity_main.xml  activity_userinfo.xml  fragment_one.xml
baseLib/: build.gradle
baseLib/src/main/: AndroidManifest.xml
baseLib/src/main/java/com/shibainu/li/baselib/: BaseActivity.kt  IUiView.kt  (+4 more)
baseLib/src/main/res/layout/: activity_nivigation_test.xml  fragment_dashboard.xml  fragment_home.xml  fragment_notifications.xml
baseLib/src/main/res/navigation/: mobile_navigation.xml
baseLib/src/main/res/values/: strings.xml
cmdLib/: build.gradle
dbRoomLibs/: build.gradle
dbRoomLibs/src/main/: AndroidManifest.xml
dbRoomLibs/src/main/res/layout/: activity_db_main.xml
gradle/wrapper/: gradle-wrapper.properties
httpLib/: build.gradle
lib_player/: build.gradle
lib_player/libs/includes/libavformat/: avio.h
lib_player/src/androidTest/java/com/sbl/lib_player/: ExampleInstrumentedTest.kt
lib_player/src/main/: AndroidManifest.xml
lib_player/src/main/cpp/: AudioDecoding.cpp  AudioDecoding.h  BaseDecoding.h  CMakeLists.txt  SL_Player.cpp  SL_Player.h  VideoDecoding.cpp  VideoDecoding.h  playerNative.cpp
lib_player/src/main/cpp/decoding/: AudioDecoding.cpp  AudioDecoding.h  BaseDecoding.cpp  BaseDecoding.h  VideoDecoding.cpp  VideoDecoding.h
lib_player/src/main/cpp/tools/: Bridge.cpp  Bridge.h  Log.cpp  Log.h  PlayerCMD.h  PlayerStatus.h
lib_player/src/main/java/com/sbl/lib_player/: PlayerManager.kt
lib_player/src/main/res/layout/: activity_test_player.xml
toolsLibs/: build.gradle
(+31 files in other folders)
